--- a/Form-Elemanları/form-elemanlari.html
+++ b/Form-Elemanları/form-elemanlari.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form Örneği</title>
 </head>
 <body>
-    <h1> Form Elemanları Kullanımı</h1>
+    <h1> Kayıt Formu</h1>
     <form action="" method="post">
-          <!-- Text Input -->
         <label for="first-lastname">İsim Soyisim</label>
         <input type="text" name="first-lastname" placeholder="İsim Soyisim"> <br>
         <label for="email">E-Mail Adresiniz</label>
